WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46625
Placing mouse cursor inside a scrollable area and scrolling the mouse wheel generally doesn't scroll the area
https://bugs.webkit.org/show_bug.cgi?id=46625
Summary
Placing mouse cursor inside a scrollable area and scrolling the mouse wheel g...
Adam Roben (:aroben)
Reported
2010-09-27 08:37:39 PDT
To reproduce: 1. Go to data:text/html,%3Cdiv%20style=%22overflow:scroll;%20height:100px;%22%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E%3Cbr%3E 2. Place the mouse cursor over the scrollable area 3. Scroll the mouse wheel The scrollable area doesn't scroll. But it does in WebKit1!
Attachments
Give mouse wheel events the right coordinates on Windows
(3.14 KB, patch)
2010-09-27 09:11 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-27 08:38:06 PDT
<
rdar://problem/8481161
>
Adam Roben (:aroben)
Comment 2
2010-09-27 09:11:14 PDT
Created
attachment 68916
[details]
Give mouse wheel events the right coordinates on Windows
Adam Roben (:aroben)
Comment 3
2010-09-27 09:21:56 PDT
Committed
r68396
: <
http://trac.webkit.org/changeset/68396
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug