WebKit2/Shared/win/WebEventFactory.cpp
@@ -46,16 +46,9 @@ static inline LPARAM relativeCursorPosition(HWND hwnd)
     return MAKELPARAM(point.x, point.y);
 }
 
-static inline POINT positionForEvent(HWND hWnd, LPARAM lParam)
+static inline POINT point(LPARAM lParam)
 {
     POINT point = { GET_X_LPARAM(lParam), GET_Y_LPARAM(lParam) };
-    return point;
-}
-
-static inline POINT globalPositionForEvent(HWND hWnd, LPARAM lParam)
-{
-    POINT point = { GET_X_LPARAM(lParam), GET_Y_LPARAM(lParam) };
-    ::ClientToScreen(hWnd, &point);
     return point;
 }
 
@@ -391,8 +384,9 @@ WebMouseEvent WebEventFactory::createWebMouseEvent(HWND hWnd, UINT message, WPAR
         type = WebEvent::KeyDown;
     }
 
-    POINT position = positionForEvent(hWnd, lParam);
-    POINT globalPosition = globalPositionForEvent(hWnd, lParam);
+    POINT position = point(lParam);
+    POINT globalPosition = position;
+    ::ClientToScreen(hWnd, &globalPosition);
 
     int positionX = position.x;
     int positionY = position.y;
@@ -411,8 +405,9 @@ WebWheelEvent WebEventFactory::createWebWheelEvent(HWND hWnd, UINT message, WPAR
     // Taken from WebCore
     static const float cScrollbarPixelsPerLine = 100.0f / 3.0f;
 
-    POINT position = positionForEvent(hWnd, lParam);
-    POINT globalPosition = globalPositionForEvent(hWnd, lParam);
+    POINT globalPosition = point(lParam);
+    POINT position = globalPosition;
+    ::ScreenToClient(hWnd, &position);
 
     int positionX = position.x;
     int positionY = position.y;
